# OuterTune

./: .gitignore  CONTRIBUTING.md  README.md  build.gradle.kts  changes.patch  gradle.properties  settings.gradle.kts
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: build.yml  build_pr.yml
app/: build.gradle.kts  proguard-rules.pro
app/libs/: ffmpeg-kit-release.aar
app/schemas/com.dd3boh.outertune.db.InternalDatabase/: 1.json  13.json  14.json  15.json  16.json
app/src/debug/res/values/: app_name.xml
app/src/debug/res/xml-v25/: shortcuts.xml
app/src/main/: AndroidManifest.xml
app/src/main/jni/: CMakeLists.txt  ffprobejni.c
app/src/main/res/drawable/: discord.xml  github.xml  launcher_foreground.xml  launcher_monochrome.xml  small_icon.xml
app/src/main/res/values/: styles.xml  (+2 more)
app/src/main/res/values-DE/: strings.xml
app/src/main/res/values-be/: strings.xml
app/src/main/res/values-bn-rIN/: strings.xml
app/src/main/res/values-cs/: strings.xml
app/src/main/res/values-el-rGR/: strings.xml
app/src/main/res/values-es/: strings.xml
app/src/main/res/values-fa-rIR/: strings.xml
app/src/main/res/values-fi-rFI/: strings.xml
app/src/main/res/values-fr-rFR/: strings.xml
fastlane/metadata/android/pt-BR/: full_description.txt  short_description.txt
fastlane/metadata/android/zh-CN/: full_description.txt  short_description.txt
ffMetadataEx/: .gitignore  build.gradle.kts
ffMetadataEx/src/main/cpp/: CMakeLists.txt  ffMetaExJni.c  ffMetaExJni.cpp  ffprobejni.c
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
kizzy/: build.gradle.kts
kugou/: build.gradle.kts
material-color-utilities/: build.gradle.kts
(+296 files in other folders)
